--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -6,5 +6,6 @@ $link: #8DB4FF;
 $highlight: #5588FF;
 $green: #1AEC22;
 $red: #F41919;
+$purple: #8839ef;
 $text: #4c4f69;
 $blue-filter: invert(49%) sepia(38%) saturate(4860%) hue-rotate(208deg) brightness(105%) contrast(101%);
