--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,5 +1,5 @@
 $background: #faf4ed;
-$background-alt: #2A2C31;
+$background-alt: #fffaf3;
 $background-light: #EEEEEE;
 $selection: #FFC85C;
 $link: #8DB4FF;
