--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -46,9 +46,7 @@ main {
 
 
 ::selection {
-    background-color: transparent;
-    font-weight: 1000;
-    color: colors.$selection;
+    background-color: #babbf1;
 }
 
 footer {
