--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,4 +1,4 @@
-$background: #faf4ed;
+$background: #eff1f5;
 $background-alt: #fffaf3;
 $background-light: #EEEEEE;
 $selection: #FFC85C;
@@ -8,4 +8,6 @@ $green: #1AEC22;
 $red: #F41919;
 $purple: #8839ef;
 $text: #4c4f69;
+$text-highlight: #eff1f5;
+$gray: #ccd0da;
 $blue-filter: invert(49%) sepia(38%) saturate(4860%) hue-rotate(208deg) brightness(105%) contrast(101%);
