--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,12 +1,17 @@
+// https://catppuccin.com/
 $background: #eff1f5;
-$background-alt: #fffaf3;
-$background-light: #EEEEEE;
-$selection: #FFC85C;
-$link: #8DB4FF;
-$highlight: #5588FF;
-$green: #1AEC22;
-$red: #F41919;
+$background-alt: #e6e9ef;
+$background-light: #e6e9ef;
+$rosewater: #dc8a78;
+$yellow: #df8e1d;
+$orange: #fe640b;
+$blue: #1e66f5;
+$green: #40a02b;
+$red: #d20f39;
+$maroon: #e64553;
 $purple: #8839ef;
+$lavender: #7287fd;
+$pink: #ea76cb;
 $text: #4c4f69;
 $text-highlight: #eff1f5;
 $gray: #ccd0da;
