--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -23,16 +23,13 @@ h2 {
 
 body {
     margin: 0;
+    background-color: colors.$background;
 }
 
 .body {
-    background-color: colors.$background;
     min-height: 100vh;
-    margin: 0;
-
     display: flex;
     flex-direction: column;
-
 }
 
 main {
@@ -40,7 +37,6 @@ main {
 
     @include mixins.screen("not-desktop") {
         z-index: 1;
-        // position: absolute;
     }
 }
 
@@ -72,6 +68,7 @@ footer {
 
 .title {
     color: colors.$text;
+    font-family: fonts.$special;
     font-weight: 700;
     font-size: 4rem;
 }
@@ -92,13 +89,12 @@ p {
 
 // SCROLLBAR
 html::-webkit-scrollbar {
-    width: 12px;
-    height: 16px;
+    width: 8px;
 }
 
 html::-webkit-scrollbar-thumb {
-    background: colors.$selection;
-    border-radius: 8px;
+    background: colors.$text;
+    border-radius: 3px;
     // box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25),inset -2px -2px 2px rgba(0,0,0,.25);
 }
 
