fun buttons and good prettier

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -11,6 +11,7 @@ $red: #d20f39;
 $maroon: #e64553;
 $purple: #8839ef;
 $lavender: #7287fd;
+$teal: #179299;
 $pink: #ea76cb;
 $text: #4c4f69;
 $text-highlight: #eff1f5;
