--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -37,7 +37,7 @@ header {
 }
 
 
-@include mixins.screen("desktop") {
+@include mixins.screen("not-mobile") {
     .nav-links {
         margin-left: 1rem;
     }
@@ -45,11 +45,17 @@ header {
     .nav-more-menu {
         position: absolute;
         right: 0;
-        top: 1em;
+        transform: translateX(100%);
+        top: 2rem;
         list-style-type: none;
         text-align: left;
-        display: none;
-        background-color: white;
+        background-color: colors.$background-light;
+        padding: 0;
+        line-height: 1.7rem;
+        display: flex;
+        flex-direction: column;
+        animation: slide-right 0.5s forwards ease-out;
+        transition: all 0.1s;
     }
 }
 
@@ -67,7 +73,6 @@ header {
         text-align: center;
         max-width: 100vw;
     }
-
 }
 
 .nav-container-mobile {
@@ -130,6 +135,101 @@ header {
     z-index: 999;
 }
 
-.nav-visible {
-    display: block;
+.nav-invisible {
+    animation: slide-left 0.5s forwards ease-out;
+}
+
+.nav-more-more {
+    animation: forwards 0.7s ease-in-out 0s 1 highlight2;
+}
+
+.nav-more-less {
+    animation: forwards 0.7s ease-in-out 0s 1 highlight3;
+}
+
+.more-link-icon {
+    @include mixins.screen("desktop") {
+        filter: colors.$blue-filter;
+    }
+
+    display: var(--fa-display, inline-block);
+    height: 1em;
+    overflow: visible;
+    vertical-align: -0.15em;
+    transition: all 0.1s;
+    right: 0.25em;
+    position: absolute;
+}
+
+.more-link-container {
+    width: 100%;
+    margin: 0;
+    flex-grow: 1;
+    padding: 2px 10px 2px 10px;
+    transition: all 0.1s ease-in-out;
+
+    @include mixins.screen("desktop") {
+        a {
+            text-decoration: none !important;
+        }
+
+        &:hover {
+            background: colors.$blue;
+            font-weight: 800;
+        }
+
+        &:hover a,
+        &:hover {
+            color: white !important;
+        }
+
+        &:hover .more-link-icon {
+            filter: brightness(0) invert(100%);
+            width: inherit;
+        }
+    }
+}
+
+.more-link {
+    padding-right: 1.5em;
+}
+
+@keyframes highlight2 {
+    0% {
+        background-color: colors.$blue;
+        color: white;
+    }
+
+    100% {
+        background-color: colors.$background;
+        color: colors.$text;
+    }
+}
+
+@keyframes highlight3 {
+    0% {
+        background-color: colors.$teal;
+        color: white;
+    }
+
+    100% {
+        background-color: colors.$background;
+        color: colors.$text;
+    }
+}
+
+@keyframes slide-right {
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slide-left {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(100%);
+    }
 }
