mobile debugging meta tag

--- a/src/components/seo.astro
+++ b/src/components/seo.astro
@@ -3,6 +3,7 @@ import { SEO } from "astro-seo";
 const {title, description} = Astro.props;
 ---
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 <SEO
   title={title}
   description={description}
