--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,5 +25,6 @@ import '../sass/home.scss';
     <div class="text">
         <p>> new? read the <ILink href="/foreword">foreword</ILink></p>
         <p><Visitors client:idle/></p>
+        <p>> currently thinking about <ILink href="/blog">???</ILink></p>
     </div>
 </Layout>
