--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -11,3 +11,32 @@
 h2 {
     padding-top: 2rem;
 }
+
+blockquote {
+    position: relative;
+    margin: 0 0 1.5rem 0;
+    padding: 1rem;
+    background-color: colors.$background-alt;
+
+
+    p {
+        font-size: fonts.$s-1;
+        margin: 0;
+    }
+
+    &::before {
+        content: "";
+        background-color: colors.$pink;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 3px;
+    }
+}
+
+.astro-code {
+    padding: 1rem;
+    border-radius: 5px;
+    box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.75);
+}
