--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -129,7 +129,7 @@ header {
     padding: 2px 10px 2px 10px;
     transition: all 0.1s ease-in-out;
 
-    @include mixins.screen("desktop") {
+    @include mixins.screen("not-mobile") {
         a {
             text-decoration: none !important;
         }
