--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,14 +12,14 @@ import '../sass/home.scss';
 <head>
     <Seo title="bencuan's website" description='builder' />
 </head>
-<Layout currPage="bencuan" client:idle>
+<Layout currPage="home" client:idle>
     <h1 class="name">ben cuan</h1>
     <p class="splash">
         I build things and write about them sometimes.
     </p>
     <div class="home-buttons">
         <Button href="/rss.xml"><FontAwesomeIcon icon={faRss} /> rss</Button>
-        <Button href="/rss.xml"><FontAwesomeIcon icon={faNewspaper} /> newsletter</Button>
+        <Button href="https://bencuan.substack.com"><FontAwesomeIcon icon={faNewspaper} /> newsletter</Button>
     </div>
     
     <div class="text">
