--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -91,6 +91,11 @@ p {
     margin-top: 0;
 }
 
+.ui-text,
+.ui-text p {
+    font-family: fonts.$ui;
+}
+
 
 // SCROLLBAR
 html::-webkit-scrollbar {
