--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,11 +5,9 @@ import '../sass/home.scss';
 ---
 
 <head>
-    <Seo title="bencuan's website" description='builder' />
+  <Seo title="bencuan's website" description="builder" />
 </head>
 <Layout currPage="blog" client:idle>
-    <h1>blog</h1>
-    <p class="splash">
-        I build things and write about them sometimes.
-    </p>
+  <h1>blog</h1>
+  <p class="splash">I build things and write about them sometimes.</p>
 </Layout>
