--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -24,17 +24,17 @@ import { XLink } from "../components/links.tsx";
 
         <p>
         <FontAwesomeIcon icon={faTwitter} className="contact-icon" />
-        <XLink href="https://twitter.com/bencuan_" label="twitter"><b>twitter:</b> @bencuan_</XLink>
+        <b>twitter:</b><XLink href="https://twitter.com/bencuan_" label="twitter"> @bencuan_</XLink>
         </p>
 
         <p>
         <FontAwesomeIcon icon={faMastodon} className="contact-icon" />
-        <XLink href="https://hachyderm.io/@bencuan" label="mastodon"><b>mastodon:</b> @bencuan@hachyderm.io</XLink>
+        <b>mastodon:</b> <XLink href="https://hachyderm.io/@bencuan" label="mastodon">@bencuan@hachyderm.io</XLink>
         </p>
 
         <p>
         <FontAwesomeIcon icon={faLinkedin} className="contact-icon" />
-        <XLink href="https://linkedin.com/in/bencuan" label="linkedin"><b>linkedin:</b> linkedin.com/in/bencuan</XLink>
+        <b>linkedin:</b> <XLink href="https://linkedin.com/in/bencuan" label="linkedin">linkedin.com/in/bencuan</XLink>
         </p>
 
     </div>
