--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,21 +10,19 @@ import '../sass/home.scss';
 ---
 
 <head>
-    <Seo title="bencuan's website" description='builder' />
+  <Seo title="bencuan's website" description="builder" />
 </head>
 <Layout currPage="home" client:idle>
-    <h1 class="name">ben cuan</h1>
-    <p class="splash">
-        I build things and write about them sometimes.
-    </p>
-    <div class="home-buttons">
-        <Button href="/rss.xml"><FontAwesomeIcon icon={faRss} /> rss</Button>
-        <Button href="https://bencuan.substack.com"><FontAwesomeIcon icon={faNewspaper} /> newsletter</Button>
-    </div>
-    
-    <div class="text">
-        <p>> new? read the <ILink href="/foreword">foreword</ILink></p>
-        <p><Visitors client:idle/></p>
-        <p>> currently thinking about <ILink href="/blog">???</ILink></p>
-    </div>
+  <h1 class="name">ben cuan</h1>
+  <p class="splash">I build things and write about them sometimes.</p>
+  <div class="home-buttons">
+    <Button href="/rss.xml"><FontAwesomeIcon icon={faRss} /> rss</Button>
+    <Button href="https://bencuan.substack.com"><FontAwesomeIcon icon={faNewspaper} /> newsletter</Button>
+  </div>
+
+  <div class="text">
+    <p>> new? read the <ILink href="/foreword">foreword</ILink></p>
+    <p><Visitors client:idle /></p>
+    <p>> currently thinking about <ILink href="/blog">???</ILink></p>
+  </div>
 </Layout>
