--- a/src/pages/[...root].astro
+++ b/src/pages/[...root].astro
@@ -7,10 +7,10 @@ import { MDLink } from '../components/links.tsx';
 
 export const prerender = true;
 export async function getStaticPaths() {
-  console.log("HI")
   const entries = await getCollection('root');
   return entries.map(entry => ({
-    params: { root: entry.slug }, props: { entry },
+    params: { root: entry.slug },
+    props: { entry },
   }));
 }
 // 2. For your template, you can get the entry directly from the prop
@@ -19,10 +19,10 @@ const { Content } = await entry.render();
 ---
 
 <head>
-    <Seo title="bencuan's website" description='builder' />
+  <Seo title={entry.data.title} description={entry.data.description} />
 </head>
 <Layout currPage={entry.data.title} client:idle>
-    <h1 class="blog-title">{entry.data.title}</h1>
-    <p class="blog-date">{entry.data.date}</h1>
-    <Content components={{a: MDLink}} />
+  <h1 class="blog-title">{entry.data.title}</h1>
+  <p class="blog-date">{entry.data.date}</p>
+  <Content components={{ a: MDLink }} />
 </Layout>
