--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../components/layout"
-import Seo from "../components/seo.astro"
-import { XLink } from "../components/links.tsx";
+import Layout from '../components/layout';
+import Seo from '../components/seo.astro';
+import { XLink } from '../components/links.tsx';
 import '../sass/projects.scss';
 
 const statuses = ['planning', 'development', 'production', 'LTS'];
@@ -11,19 +11,13 @@ const activeProjects = [
     name: 'blog',
     status: 'production',
     link: 'https://bencuan.me/blog',
-    description: [
-      'some thoughts, goals, and dreams.',
-      'article production in progress.'
-    ]
+    description: ['some thoughts, goals, and dreams.', 'article production in progress.'],
   },
   {
     name: 'turtlenet',
     status: 'production',
     link: 'https://devlog.bencuan.me/series/turtlenet',
-    description: [
-      'a beginner’s guide to homelabbing.',
-      'prepping for season 2...'
-    ]
+    description: ['a beginner’s guide to homelabbing.', 'prepping for season 2...'],
   },
   {
     name: 'notes',
@@ -31,7 +25,7 @@ const activeProjects = [
     link: 'https://notes.bencuan.me',
     description: [
       'deciphering Berkeley CS classes for general consumption on an Obsidian-friendly markdown rendering engine.',
-    ]
+    ],
   },
   // {
   //   name: 'azulea',
@@ -45,74 +39,91 @@ const completedProjects = [
   {
     name: 'catan',
     link: 'https://catan.bencuan.me',
-    description: 'roll without replacement for extra spicy strategy'
+    description: 'roll without replacement for extra spicy strategy',
   },
   {
     name: 'amethyst',
     link: 'https://amethyst.bencuan.me',
-    description: 'hugo theme for obsidian notes'
+    description: 'hugo theme for obsidian notes',
   },
   {
     name: 'dotfiles',
     link: 'https://github.com/64bitpandas/dotfiles',
-    description: 'pretty linux configs'
+    description: 'pretty linux configs',
   },
   {
     name: 'simultaneous-scrabble',
     link: 'https://scrabbleserver.bencuan.me',
-    description: 'multiplayer online scrabble where everyone plays at the same time'
+    description: 'multiplayer online scrabble where everyone plays at the same time',
   },
   {
     name: 'inboxier',
     link: 'https://github.com/64bitpandas/inboxier',
-    description: 'a true Google Inbox extension for gmail, with built-in bundling'
+    description: 'a true Google Inbox extension for gmail, with built-in bundling',
   },
   {
     name: 'room-of-sounds',
     link: 'https://github.com/64bitpandas/RoomOfSounds',
-    description: 'Unity to Max/MSP interoperability demo'
+    description: 'Unity to Max/MSP interoperability demo',
   },
   {
     name: 'piazza-archiver',
     link: 'https://github.com/64bitpandas/piazza-archiver',
-    description: 'download all Piazza posts from a course in json format'
+    description: 'download all Piazza posts from a course in json format',
   },
   {
     name: 'launchhacks',
     link: 'https://launchhacks.bananium.com',
-    description: 'just another high school hackathon'
+    description: 'just another high school hackathon',
   },
-]
+];
 ---
 
 <head>
-    <Seo title="bencuan's website" description='builder' />
+  <Seo title="bencuan's website" description="builder" />
 </head>
-<Layout currPage='projects' client:idle>
-<div class="container">
+<Layout currPage="projects" client:idle>
+  <div class="container">
     <h1 class="title">project status</h1>
-    {activeProjects.map((proj) => (
+    {
+      activeProjects.map(proj => (
         <div class="proj-container">
-        <div class="proj-sidebar">
+          <div class="proj-sidebar">
             <div class="center-desktop">
-            {statuses.map((status) => 
-            (<div class={`proj-status ${(status === proj.status) ? `curr-status status-${proj.status}` : ''}`}>{status}</div>)
-            )}
+              {statuses.map(status => (
+                <div class={`proj-status ${status === proj.status ? `curr-status status-${proj.status}` : ''}`}>
+                  {status}
+                </div>
+              ))}
             </div>
+          </div>
+          <div class="proj-content">
+            <XLink href={proj.link} label={proj.name} className="link proj-link">
+              {proj.name}
+            </XLink>
+            <p>
+              {proj.description.map(line => (
+                <>
+                  {line}
+                  <br />
+                </>
+              ))}
+            </p>
+          </div>
         </div>
-        <div class="proj-content">
-            <XLink href={proj.link} label={proj.name} className="link proj-link">{proj.name}</XLink>
-            <p>{proj.description.map(line => (<>{line}<br/></>))}</p>
-        </div>
-        </div>
-    ))}
+      ))
+    }
 
     <h2>completed projects</h2>
-    {completedProjects.map((proj) => (
-    <div class="completed-project">
-        <XLink href={proj.link} label={proj.name} className="link proj-link">{proj.name}</XLink>
-        <p>{proj.description}</p>
-    </div>
-    ))}
-</div>
+    {
+      completedProjects.map(proj => (
+        <div class="completed-project">
+          <XLink href={proj.link} label={proj.name} className="link proj-link">
+            {proj.name}
+          </XLink>
+          <p>{proj.description}</p>
+        </div>
+      ))
+    }
+  </div>
 </Layout>
