--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import '../sass/home.scss';
   </div>
 
   <div class="text">
-    <p>> new? read the <ILink href="/foreword">foreword</ILink></p>
+    <p>> new? read the <ILink href="blog/foreword">foreword</ILink></p>
     <p><Visitors client:idle /></p>
     <p>> currently thinking about <ILink href="/blog">???</ILink></p>
   </div>
