--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -158,6 +158,8 @@ Novela,
 sans-serif;
 $code: FiraCode,
 monospace;
+$sans: NeueMontreal,
+sans-serif;
 
 
 $s-2: clamp(0.774rem, 0.81rem + -0.048vi, 0.8rem);
