--- a/src/pages/[...recipe].astro
+++ b/src/pages/[...recipe].astro
@@ -2,19 +2,18 @@
 import { getCollection } from 'astro:content';
 import Layout from '../components/layout.jsx';
 import Seo from '../components/seo.astro';
-import '../sass/blog.scss';
-import { MDLink } from '../components/links.tsx';
-import { ToDateString } from '../components/factories';
+import '../sass/recipe.scss';
+import { MDLink } from '../components/links.jsx';
+import { ToDateString } from '../components/factories.jsx';
 
 export const prerender = true;
 export async function getStaticPaths() {
-  const entries = await getCollection('root');
+  const entries = await getCollection('recipes');
   return entries.map(entry => ({
-    params: { root: entry.slug },
+    params: { recipe: entry.slug },
     props: { entry },
   }));
 }
-// 2. For your template, you can get the entry directly from the prop
 const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
@@ -22,7 +21,7 @@ const { Content } = await entry.render();
 <head>
   <Seo title={entry.data.title} description={entry.data.description} />
 </head>
-<Layout currPage={entry.data.title} client:idle>
-  <h1 class="blog-title">{entry.data.title}</h1>
+<Layout currPage={'recipes'} customPages={[{ name: 'recipes', url: '/recipes' }]} client:idle>
+  <h1 class="recipe-title">{entry.data.title}</h1>
   <Content components={{ a: MDLink }} />
 </Layout>
