--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,12 @@
 ---
 import Layout from '../components/layout';
 import Seo from '../components/seo.astro';
+import SearchSortFilter from '../components/searchSortFilter.tsx';
 import '../sass/home.scss';
+import { getCollection } from 'astro:content';
+
+const collection = await getCollection('blog');
+const items = collection.map(item => ({ ...item.data, slug: item.slug }));
 ---
 
 <head>
@@ -10,4 +15,6 @@ import '../sass/home.scss';
 <Layout currPage="blog" client:idle>
   <h1>blog</h1>
   <p class="splash">I build things and write about them sometimes.</p>
+
+  <SearchSortFilter sortCategories={['title', 'date']} items={items} type="blog" client:load />
 </Layout>
