--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,42 +1,23 @@
 ---
-import Layout from "../components/layout"
-import Seo from "../components/seo.astro"
-import { faEnvelope } from "@fortawesome/free-solid-svg-icons";
-import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
-import { faLinkedin, faMastodon, faTwitter } from "@fortawesome/free-brands-svg-icons";
-import { XLink } from "../components/links.tsx";
+import Layout from '../components/layout';
+import Seo from '../components/seo.astro';
+import { faEnvelope } from '@fortawesome/free-solid-svg-icons';
+import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
+import { faLinkedin, faMastodon, faTwitter } from '@fortawesome/free-brands-svg-icons';
+import { XLink } from '../components/links.tsx';
+import ContactCard from '../components/contactCard.tsx';
+import '../sass/contact.scss';
 ---
 
 <head>
-    <Seo title="contact | bencuan" description='contact me' />
+  <Seo title="contact | bencuan" description="contact me" />
 </head>
-<Layout currPage='contact'>
-    <div class="container ui-text">
-        <h1 class="title">contact</h1>
-        <p>
-        let's be friends!
-        </p>
+<Layout currPage="contact">
+  <div class="container ui-text">
+    <h1 class="title">contact</h1>
+    <p class="splash">let's be friends!</p>
 
-        <p>
-        <FontAwesomeIcon icon={faEnvelope} className="contact-icon" />
-        <span><b>email:</b> contact (at) bencuan.me</span>
-        </p>
-
-        <p>
-        <FontAwesomeIcon icon={faTwitter} className="contact-icon" />
-        <b>twitter:</b><XLink href="https://twitter.com/bencuan_" label="twitter"> @bencuan_</XLink>
-        </p>
-
-        <p>
-        <FontAwesomeIcon icon={faMastodon} className="contact-icon" />
-        <b>mastodon:</b> <XLink href="https://hachyderm.io/@bencuan" label="mastodon">@bencuan@hachyderm.io</XLink>
-        </p>
-
-        <p>
-        <FontAwesomeIcon icon={faLinkedin} className="contact-icon" />
-        <b>linkedin:</b> <XLink href="https://linkedin.com/in/bencuan" label="linkedin">linkedin.com/in/bencuan</XLink>
-        </p>
-
-    </div>
+    <ContactCard client:idle />
+  </div>
 </Layout>
 )
