--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -34,3 +34,8 @@
 .show-archive {
     user-select: none;
 }
+
+.simple-icon {
+    font-size: 1.25rem;
+    transform: translateY(3px) scale(.8);
+}
